assets/css/styles.css
/* ... */
 figure#philip_castle {
     width: 100%;
     margin: 40px 0;
 }

 #philip_castle img {
     width: 70%;
     min-width: 300px;
     margin: 0 15%;
     position: relative;
 }

 #philip_castle figcaption {
     position: relative;
     width: 68.5%;
     /* min-width: 288px; */
     margin: -4px auto 0 15%;
 }

 #henry_II img,
 #philip img,
 #arthur_kingOfBrittany img {
     width: 100%;
 }

 #arthur blockquote {
     margin: 10px;
 }


 /****** FOOTER  *****/
 footer {
     background-color: #8f0303;
     position: relative;
     z-index: 899;
     padding-bottom: 30px;
 }

 footer #contact_us {
     color: #F3F1F1;
     text-align: center;
     font-family: 'Montserrat', 'Verdana', sans-serif;
     padding: 15px 5% 10px;
     /*#8f0303 = rgb(143, 3, 3)*/
     background-color: rgba(143, 3, 3, 1);

 }

 footer #contact_us h2 {
     color: whitesmoke;
     font-weight: 500;
     font-family: 'Metamorphous', cursive;
     font-size: 1.7rem;
     font-variant: small-caps;
 }

 footer #contact_us p {
     margin-top: 0;
     font-size: 1rem;
     display: inline-block;
 }

 footer #contact_us a {
     text-decoration: none;
     color: #F3F1F1;
     transition: all 0.5s linear;

 }

 footer #contact_us a:hover {
     color: #D6D6D6;
     font-weight: 500;
 }


 footer .fab,
 footer .fa {
     color: #F3F1F1;
     padding: 0 30px;
     font-size: 30px;
     transition: all 0.15s linear;
 }

 footer .fab:hover,
 footer .fa:hover {
     color: #D6D6D6;
     transform: scale(1.1);
 }


 footer .social-media {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     padding: 0;
     margin: 0 0 0px;
 }


 /**** AVALON *****************/
 #avalon {
     position: relative;
     color: #F3F1F1;
 }

 #avalon header {
     border-bottom-width: 1px;
 }

 #avalon header .image {
     background: url('../images/avalon_header_abalone_shell_150x175.avif') center center, url('../images/avalon_header_abalone_shell_150x175.png') center center;
     display: flex;
     margin-right: 40px;
     /* margin-top: 20px; */
     /* float: left; */
     width: 100%;
     max-width: 150px;
     height: 175px;
     border-style: outset;
     border-width: 2px;
     border-color: rgb(88, 88, 88);
     box-shadow: 0 0 10px rgb(88, 88, 88);
 }

 #avalon .background_image {
     background: url('../images/avalon_bg_img_rocky_beach_guernsey_near_fort_houmet_2000x2000px.avif') top -450px center fixed, url('../images/avalon_bg_img_rocky_beach_guernsey_near_fort_houmet_2000x2000px.jpg') top -450px center fixed;
     overflow: hidden;
 }

 #avalon .black_transparency {
     background-color: rgba(51, 51, 51, 0.1);
     padding: 7%;
     z-index: 300;
 }

 #abalone_frenchPronunciation {
     padding: 20px 30px 40px;
     text-align: center;
     display: block;
     background-color: #1B1B1B;
     width: 75%;
     margin: 40px auto 0;
     border-radius: 10px;
     box-shadow: inset 0px 0px 30px rgba(253, 253, 253, 0.9);
 }

 #abalone_frenchPronunciation h2 {
     font-family: 'Jim Nightshade', cursive;
     font-size: 2.2rem;
     font-weight: 400;
 }

 #avalon section {
     padding: 60px 7%;
     background-color: #1B1B1B;
     margin: 100px auto;
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(253, 253, 253, 0.9);
 }

 #avalon .content {
     position: relative;
     display: inline-flex;
 }

 #avalon section h2 {
     position: relative;
     display: inline-block;
     margin-left: 0;
     line-height: 1.1;
     font-family: 'Jim Nightshade', cursive;
     color: rgba(243, 241, 241, 0.966);
     font-size: 2.3rem;
     font-weight: 500;
     padding: 10px;
     margin-top: 0;
     margin-bottom: 0;
     text-shadow: 0 0 10px rgb(2, 2, 2);
 }

 #avalon section p {
     text-shadow: 0 0 10px rgb(2, 2, 2);
     text-align: justify;
     text-justify: inter-word;
 }

 #avalon section p a {
     text-shadow: none;
 }

 #avalon figcaption {
     width: 286px;
     display: flex;
 }

 #avalon figcaption a {
     color: whitesmoke;
     text-decoration: none;
 }

 #avalon figcaption a:hover {
     color: goldenrod;
 }

 #avalon iframe {
     width: 300px;
     height: 220px;
     margin: 20px 40px 0 0;
 }

 #avalon figure {
     margin: 20px 40px 0 0;
 }



 /**** CONTACT / SIGN-UP *******/
 #sign_up {
     background-color: #a50000;
 }

 #sign_up header {
     text-align: center;
     padding: 120px 7% 30px;
     /* min-height: 5rem;
     max-height: 12rem; */
     background-color: #B30502;
     line-height: 1.7;
     margin-bottom: 0;
 }

 #sign_up h1 {
     font-family: 'Metamorphous', cursive;
     font-size: 1.5rem;
     font-weight: 400;
     margin: 0 auto;
     padding: 0 15px;
     color: rgb(243, 241, 241);
     text-shadow: 0 0 20px rgb(27, 27, 27), 0 0 20px rgb(27, 27, 27);
 }

 #sign_up .bg_img {
     background: url('../images/sign_up_bg_img_castle_1920x1278.jpg') center center fixed repeat-y;
 }

 #sign_up .black_transparency {
     background-color: rgba(0, 0, 0, 0.651);
 }

 #sign_up_flex {
     display: flex;
     padding: 120px 0;
 }

 #sign_up_flex .events {
     width: 55%;
     padding: 0;
     margin-bottom: 0;
 }

 #social_events>div,
 #cultural_events>div,
 #share_findings>div {
     /*vertically align*/
     display: flex;
     justify-content: center;
     align-items: center;
     /*end*/
     background-color: whitesmoke;
     position: relative;
     min-width: 400px;
     margin: 0 auto 90px 60px;
     padding-left: 0;
     border-radius: 10px;
     border-style: outset;
     border-color: #F3F1F1;
     border-width: 1px;
 }

 #social_events .text,
 #cultural_events .text,
 #sightseeing_events .text {
     background-color: whitesmoke;
     height: 300px;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     /* align vertically*/
     display: flex;
     justify-content: center;
     align-items: center;
     /*end align vertically*/
 }
/* ... */

